@@ -1,0 +1,12 @@
+(0, 5)
+(-inf, inf)
+(42, inf)
+(-inf, 42)
+(0 5 1)
+(-inf inf 0.1)
+0
+1
+2
+3
+4
+5
