@@ -2,6 +2,13 @@ Problem:
   a * d * (a + b + c) + d (not derivable)
   Argument's bounds: (-inf, inf), (-inf, inf), (-inf, inf), (-inf, inf)
   Argument's scales: 1, 1, 1, 1
+  No constraints.
+  No starting point.
+  Infinity value (for all functions): inf
+Problem:
+  a * d * (a + b + c) + d (not derivable)
+  Argument's bounds: (-inf, inf), (-inf, inf), (-inf, inf), (-inf, inf)
+  Argument's scales: 1, 1, 1, 1
   Number of constraints: 1
   Constraint 0
       a * d * (a + b + c) + d (not derivable)
