@@ -1,0 +1,2 @@
+Empty vector
+1
